# genapi

./: .gitignore  Cargo.toml  README.md  Rocket.toml
output_api/: Cargo.toml
output_api/src/: db.rs  main.rs  types.rs
src/: compile.rs  main.rs  record.rs  subcommands.rs  templates.rs  utils.rs  writers.rs
