[package]
name = "genapi"
version = "0.1.0"
authors = ["yilmazgunalp <yilmazgunalp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ramhorns = "0.9.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]